fix: eliminate flicker on initial load

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -131,7 +131,6 @@ svg {
   flex-grow: 1;
   position: relative;
   display: flex;
-  flex-direction: row;
 }
 
 .section {
@@ -244,6 +243,10 @@ svg {
   will-change: opacity;
   opacity: 1;
   transform: translate3d(0, 0, 0);
+}
+
+.fade-on-scroll__frame:nth-of-type(n + 2) {
+  opacity: 0;
 }
 
 @media screen and (prefers-color-scheme: dark) {
